<resources>
    <string name="app_name">Liv\'vit</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="desc">Description</string>
    <string name="or">ou</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="password_confirmation">Confirmer le mot de passe</string>
    <string name="connection">Connexion</string>
    <string name="signup">Créer votre compte</string>
    <string name="sign_in">Se connecter</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="forgotten_password">Mot de passe oublié</string>
    <string name="deliveryman">Livreur</string>
    <string name="sender">Expéditeur</string>
    <string name="i_am">Je suis :</string>
    <string name="facebook_app_id">249921952293467</string>
    <string name="fb_login_protocol_scheme">fb249921952293467</string>
    <string name="prompt_phonenumber">Numéro de téléphone</string>
    <string name="phone_or_email">Numéro de téléphone ou email</string>
    <string name="title_home">Accueil</string>
    <string name="title_account">Mon compte</string>
    <string name="title_history">Historique de mes courses</string>
    <string name="title_about">A propos</string>
    <string name="step1_pickup_address">1. Adresse à laquelle chercher votre colis</string>
    <string name="step2_pickup_address">2. Adresse à laquelle expédier votre colis</string>
    <string name="delivery_address">Adresse à laquelle livrer votre colis</string>
    <string name="number_and_street">Numéro et rue</string>
    <string name="zipcode">Code postal</string>
    <string name="city">Ville</string>
    <string name="other_info">Numéro de bâtiment ? Etage ? Digicode ?</string>
    <string name="comment">Commentaire</string>
    <string name="next_step">Etape suivante</string>
    <string name="send_package">Envoyer un colis</string>
    <string name="lastname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="birthdate">Date de naissance</string>
    <string name="create_account">Créer le compte</string>
    <string name="edit_account">Modifier le compte</string>
    <string name="save">Sauvegarder</string>
    <string name="car_value">Car</string>
    <string name="bicycle_value">Bicycle</string>
    <string name="truck_value">Van</string>
    <string name="motorcycle_value">Moto</string>
    <string name="pending_deliveries">Livraisons en cours</string>
    <string name="pending_deliveries_number">Livraisons en cours(%1$d)</string>
    <string name="go_to_delivery_mode">Passer en mode livraison</string>
    <string name="formatted_price">%1$s FCFA</string>
    <string name="formatted_name">%1$s %2$s</string>
    <string name="formatted_weight">%1$s kg</string>
    <string name="formatted_distance">%1$s km</string>
    <string name="formatted_address">%1$s\n%2$s</string>
    <string name="empty_history">L\'historique est vide</string>
    <string name="disconnect">Déconnexion</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_first_launch">FirstLaunchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="delivery_package">Votre colis</string>
    <string name="weight">Poids</string>
    <string name="delivery_package_dimens">Dimensions</string>
    <string name="h">H</string>
    <string name="x">x</string>
    <string name="L">L</string>
    <string name="l">l</string>
    <string name="estimate_price">Estimer le prix</string>
    <string name="price">Prix :</string>
    <string name="receiver_phone">Numéro de téléphone du destinataire</string>
    <string name="delivery_mode">Mode livreur</string>
    <string name="about">A propos</string>
    <string name="share">Partager</string>
    <string name="rates">Notes</string>
    <string name="display_path">Voir le parcours</string>
    <string name="pending">EN COURS</string>
    <string name="create_an_account">S\'inscrire</string>
    <string name="other_connection">Vous avez un compte ? SE CONNECTER</string>
    <string name="choose_role">Que voulez-vous faire ?</string>
    <string name="step3_package_weight">3. Poids du colis</string>
    <string name="comma">,</string>
    <string name="kg">kg</string>
    <string name="validate">Valider</string>
    <string name="details">Détails</string>
    <string name="step5_receiver">5. Destinataire</string>
    <string name="fullname">Nom complet</string>
    <string name="current_position">Position actuelle</string>
    <string name="select_position">Saisir la position</string>
    <string name="step4_picture">4. Photo du colis</string>
    <string name="contact">Contact</string>
    <string name="pay_and_continue">Payer et valider la course</string>
    <string name="about_text">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>
    <string name="error_network_not_available">Aucun réseau Internet disponible</string>
    <string name="share_app_link">"Je te recommande cette application très pratique pour envoyer des colis : https://play.google.com/store/apps/details?id=com.google.android.apps.plus"</string>
    <string name="your_position">Votre position</string>
    <string name="max_weight">%1$d kg</string>
    <string name="max_distance">%1$d km</string>
    <string name="max_distance_label">Distance max :</string>
    <string name="max_weight_label">Poids max :</string>
    <string name="i_valid">Je valide</string>
    <string name="deliveryman_value">0</string>
    <string name="sender_value">1</string>
    <string name="deliveryman_string">Deliveryman</string>
    <string name="sender_string">Sender</string>
    <string name="nickname">Pseudo</string>
    <string name="address">Adresse</string>
    <string name="fill_confirmation_code">Saisir le code</string>
    <string name="delivery_mode_active">Mode livreur actif</string>
    <string name="error_getting_deliveries">Erreur lors de la récupération des livraisons</string>
    <string name="package_info">Informations du colis</string>
    <string name="app_slogan">Liv\'vit, votre livraison\nrapide et fiable</string>
    <string name="error_invalid_email">Veuillez saisir une adresse email valide</string>
    <string name="error_invalid_recipient_name">Veuillez saisir le nom du destinataire</string>
    <string name="error_invalid_phone">Veuillez saisir un numéro de téléphone valide</string>
    <string name="error_invalid_password">Le mot de passe doit contenir au moins une majuscule, une minuscule, un chiffre et doit contenir 8 caractères au moins</string>
    <string name="error_password_do_not_match">Les mots de passe doivent être identiques</string>
    <string name="email_with_activation_link_sent">Un email avec un lien d\'activation vous a été envoyé, vous pourrez vous connecter une fois le compte activé</string>
    <string name="account_already_existing">Un compte est déjà existant pour cet identifiant</string>
    <string name="error">Il y a eu une erreur</string>
    <string name="more_info_needed">Plus d\'informations sur vous sont nécessaires...</string>
    <string name="empty_field">Ce champ ne peut pas être vide</string>
    <string name="step6_insurance">6. Assurance</string>
    <string name="add_picture">Ajouter votre photo</string>
    <string name="new_delivery_dialog_title">Nouvelle livraison disponible !</string>
    <string name="new_delivery_dialog_text">Une nouvelle livraison est disponible près de vous, l\'accepter ?</string>
    <string name="accept">Accepter</string>
    <string name="refuse">Refuser</string>
    <string name="ok">OK</string>
    <string name="tabs_sender">Expéditeur</string>
    <string name="tabs_deliveryman">Livreur</string>
    <string name="sender_name">Par %1$s</string>
    <string name="accepted_delivery">Livraison acceptée</string>
    <string name="input_dropoff_code">Saisir le code de réception</string>
    <string name="new_delivery_available">Une nouvelle livraison est disponible</string>
    <string name="verification_code">Code de vérification</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="finished_delivery">Terminer la course</string>
    <string name="delivery">Livraison</string>
    <string name="pickup">Récupération</string>
    <string name="delivery_pickedup">Colis récupéré</string>
    <string name="payment_accepted">Paiement accepté</string>
    <string name="delivery_accepted">Livraison acceptée</string>
    <string name="delivery_delivered">Colis livré</string>
    <string name="name_caps">NOM</string>
    <string name="your_info">Vos informations</string>
    <string name="your_availability">Votre disponibilité</string>
    <string name="i_am_available">Je suis disponible</string>
    <string name="your_vehicle">Votre véhicule</string>
    <string name="formatted_duration">%1$d min</string>
    <string name="cancel">Annuler</string>
    <string name="searching_deliveryman">Recherche de livreur</string>
    <string name="fill_info">Veuillez renseigner cette information</string>
    <string name="confirm_pickup">Confirmez-vous que vous avez récupéré le colis ?</string>
    <string name="confirm">Confirmer</string>
    <string name="fill_confirm_code_6_chars">Saisir le code à 6 chiffres</string>
    <string name="yes">Oui</string>
    <string name="no_picture">Pas de photo</string>
    <string name="country_code">+225</string>
    <string name="country_code_start">+</string>
    <string name="update_password">Modifier le mot de passe</string>
    <string name="send_code">Envoyer le code</string>
    <string name="unexisting_account">Ce compte n\'existe pas</string>
    <string name="no">Non</string>
    <string name="accept_delivery">Accepter la course</string>
    <string name="do_you_accept_delivery">Confirmez-vous que vous voulez accepter cette course ?</string>
    <string name="error_getting_your_deliveries">Erreur lors de la récupération de vos livraisons</string>
    <string name="confirm_code_hint">_ _ _ _ _ _</string>
    <string name="dropoff_contact">Contact pour réceptionner le colis</string>
    <string name="package_pickedup">Colis récupéré ?</string>
    <string name="contact_pickup">Contact pour récupérer le colis</string>
    <string name="package_droppedoff">Colis livré ?</string>
    <string name="end_delivery">Terminer la livraison</string>
    <string name="invalid_code">Le code est incorrect</string>
    <string name="code_verification">Vérification du code...</string>
    <string name="sync_with_server">Synchronisation avec le serveur...</string>
    <string name="empty"></string>
    <string name="your_path">Votre trajet</string>
    <string name="the_price">Le tarif</string>
    <string name="phone_number">NUMERO DE TELEPHONE</string>
    <string name="validated_params_text">Vous serez alerté d\'une nouvelle livraison. Vous pouvez aussi choisir les livraisons en attente</string>
    <string name="finish_userinfo_creation">Terminer la création du compte</string>
    <string name="input_code">Saisir le code</string>
    <string name="display_deliveries">Voir les livraisons</string>
    <string name="back_to_params">Retour à mes paramètres</string>
</resources>