<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:text="lacrym095@gmail.com"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_loginpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionId="6"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="eXS6mBmE"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_loginmfa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_code"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:text="@string/sign_in"
            style="@style/ButtonMain"
            android:layout_marginTop="10dp"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"
            style="@style/ButtonFourth"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_password_forgotten"
            android:text="@string/forgotten_password"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</ScrollView>