<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/sv_my_account"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="40dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_info_needed"
            android:textSize="26sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_userinfo_addpicture"
            android:text="@string/add_picture"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/iv_userinfo_picture"
                android:contentDescription="@string/desc"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/iv_delete_picture"
                android:contentDescription="@string/desc"
                android:src="@drawable/delete"
                android:layout_alignEnd="@id/iv_userinfo_picture"
                android:visibility="gone"/>

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_createuserinfo_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:inputType="textCapCharacters"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_createuserinfo_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_createuserinfo_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_createuserinfo_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phonenumber"
                android:inputType="phone"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/pb_createuserinfo"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_createuserinfo"
            style="@style/ButtonMain"
            android:layout_marginTop="10dp"
            android:text="@string/finish_userinfo_creation"/>

    </LinearLayout>

</ScrollView>