<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_forgotpassword_email">

            <EditText
                android:id="@+id/et_forgotpassword_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_forgotpassword_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verification_code"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_forgotpassword_newpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_forgot_password"
            android:text="@string/forgotten_password"
            style="@style/ButtonMain"
            android:layout_marginTop="15dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"
            style="@style/ButtonFourth"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</ScrollView>