<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_white_bg"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pickup"
            android:text="@string/step2_pickup_address"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_delivery_pickupaddress"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:textColor="@color/colorBlack"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_delivery_customaddress"
            android:layout_marginTop="10dp"
            android:text="@string/select_position"
            style="@style/ButtonMain" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_deliveryaddress_next_step"
            android:text="@string/validate"
            style="@style/ButtonMain"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>